search-bar and pagination

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,9 +5,9 @@
     "jsx": "react",
     "checkJs": true,
     "lib": ["esnext", "dom"],
-    "esModuleInterop": true, // force import
+    "esModuleInterop": true,
     "moduleResolution": "node",
 
-    "allowSyntheticDefaultImports": true // force import
+    "allowSyntheticDefaultImports": true
   }
 }
